# taiga-mcp

./: .env.example  .gitignore  README.md  RUN.md  claude_desktop_config.json  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  config.py  server.py
app/core/: __init__.py  auth.py  client.py  exceptions.py
app/models/: __init__.py  epic.py  project.py  status.py  task.py  user.py  userstory.py
app/services/: __init__.py  epic_service.py  project_service.py  task_service.py  user_service.py  userstory_service.py
tests/: __init__.py
